# Diplom_Arbeit

./: .gitignore  README.md  worktime.xlsx
Dokumentation/: Alternate-Transactions-Articles-template.doc  AnagabenTU.md  Arbeits_zeit.xlsx  Arbeitszeit.xlsx  CASE_SYSTEM.xlsx  DIP_POOLs.md  DIP_Pitch.md  DIP_Pitch_V01.docx  DIP_Pitch_V02.docx  DIP_Pitch_V03.docx  Device#01_idvg_05_10.xlsx  Diplomarbeit_Template.docx  Draft1.op.raw  Draft1.raw  IDVG_BS170_first_jey.xlsx  Keithley_23_24_10meg.xlsx  Mappe1.xlsx  Michael_worktime.xlsx  Res_ppm.xlsx  Software.md  Stressing.md  TO-DO.md  idvg_sim_100meg.emf  sim_idvg.asc  sim_idvg.raw  ~$P_Pitch_V03.docx  ~$plomarbeit_Template.docx  ~WRL2129.tmp  ~WRL2425.tmp  ~WRL3543.tmp
Dokumentation/Arbeitszeit/: Michael_Arbeitszeit.xlsx
Dokumentation/Rechnungen/: 99712510.xlsx
Dokumentation/Simulationen/: sim_idvg.asc  sim_idvg.raw
Hardware/Altium_libs/ESP32_DEVKITC_32UE/: ESP32-DEVKITC-32UE.IntLib  License.txt
Hardware/Datasheet/: item_documents_101708639 (1).xls
Hardware/PCB_Project/DIP_V01_Testing/: STM_DEV.LibPkg
Hardware/TIA_sim/: M5_020_20251107_224301.h5  M6_005_20251107_224136.h5  M7_001_20251107_224040.h5  M8_00p1_20251107_224956.h5  M8_00p3_20251107_224426.h5
Hardware/noise sim/: Draft1.op.raw  Draft1.raw  LMC6001B.LIB  LMC6001B.asy  main.asc  main.op.raw  main.raw
Software/desktop/cpp_PC_uC_usb_v01/: CMakeLists.txt  head_config.h  main.cpp  messure_config.h  messure_config_class.h
Software/py/: ADC_class.py  TIA_calc.py  git_stunden_ausgabe.py  requirements.txt  uC_serial.py  venv.bat
(+385 files in other folders)
